# PiDB

./: CMakeLists.txt  README.md  old.Makefile
include/: byteFinder.h  dataTypes.h  piMath.h
src/: byteFinder.c  dataTypes.c  main.c  piMath.c
src/math/: piMath.c  piMath.h
temp/: gmp-chudnovsky.c
tests/: main.c
